--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <div class="hero">
             <div class="hero-content flex-col lg:flex-row-reverse">
                 <div class="">
-                    <img src="./images/banner.png" class="max-w-sm ml-8" />
+                    <img src="./images/banner.png" class="max-w-sm lg:ml-8" />
                     <!-- ratings badge -->
-                    <div class="-mt-16 flex items-center gap-4 drop-shadow-lg bg-white rounded-xl p-4 w-60">
+                    <div class="-mt-16 flex items-center gap-6 drop-shadow-lg bg-white rounded-xl p-4 w-60">
                         <i class="fa-solid fa-star text-4xl text-amber-400"></i>
                         <div class="">
                             <h3 class="text-3">5.00</h3>
@@ -59,12 +59,61 @@
                     </h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn text-white bg-gradient-to-l from-[#F00] to-[#FF8938] rounded-lg">Explore More</button>
                 </div>
             </div>
         </div>
     </header>
-    <main></main>
+    <main class="container mx-auto">
+        <!-- feature section -->
+        <section class="text-center my-24">
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="lg:max-w-3xl mb-10 m-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <!-- tea cards -->
+            <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                <!-- first card -->
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="text-2xl font-bold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                      <div class="card-actions justify-end">
+                      </div>
+                    </div>
+                  </div>
+                <!-- firsecondt card -->
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="text-2xl font-bold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                      <div class="card-actions justify-end">
+                      </div>
+                    </div>
+                  </div>
+                <!-- third card -->
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="text-2xl font-bold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                      <div class="card-actions justify-end">
+                      </div>
+                    </div>
+                  </div>
+                <!-- fourth card -->
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="text-2xl font-bold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                      <div class="card-actions justify-end">
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
