--- a/index.html
+++ b/index.html
@@ -113,6 +113,23 @@
                   </div>
             </div>
         </section>
+        <!-- grgeat tea fresh tea section -->
+        <section class="my-24 flex gap-16 flex-col lg:flex-row">
+            <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+                <div class="rounded-lg h-36 bg-gradient-to-r from-red-100 to-white-100"></div>
+                <div class="row-span-2  rounded-lg bg-amber-100 bg-opacity-50 flex justify-center items-center py-12"><img src="./images/fresh-1.png" alt=""></div>
+                <div class="row-span-2 rounded-lg bg-gray-200 bg-opacity-50 flex justify-center items-center py-12"><img src="./images/fresh-2.png" alt=""></div>
+                <div class="rounded-lg h-36 bg-gradient-to-r from-[#D9D9D9] to-[rgba(255, 255, 255, 0.00)]"></div>
+            </div>
+            <div class="space-y-5 flex-1">
+                <h3 class="text-5xl font-extrabold my-8">Great Tea, Freshly Presented</h3>
+                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <h2 class="text-xl font-extrabold my-8">Unique Taste</h2>
+                <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h2 class="text-xl font-extrabold my-8">Premium Quality</h2>
+                <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
