--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                     </h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn text-white bg-gradient-to-l from-[#F00] to-[#FF8938] rounded-lg">Explore More</button>
+                    <button class="btn text-white bg-gradient-to-l from-[#F00] to-[#FF8938] rounded-lg">Explore
+                        More</button>
                 </div>
             </div>
         </div>
@@ -68,66 +69,122 @@
         <!-- feature section -->
         <section class="text-center my-24">
             <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
-            <p class="lg:max-w-3xl mb-10 m-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <p class="lg:max-w-3xl mb-10 m-auto">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+                even slightly believable. </p>
             <!-- tea cards -->
             <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
                 <!-- first card -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="text-2xl font-bold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
-                      <div class="card-actions justify-end">
-                      </div>
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions justify-end">
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <!-- firsecondt card -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="text-2xl font-bold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
-                      <div class="card-actions justify-end">
-                      </div>
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions justify-end">
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <!-- third card -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="text-2xl font-bold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
-                      <div class="card-actions justify-end">
-                      </div>
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions justify-end">
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <!-- fourth card -->
                 <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
                     <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="text-2xl font-bold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
-                      <div class="card-actions justify-end">
-                      </div>
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions justify-end">
+                        </div>
                     </div>
-                  </div>
+                </div>
             </div>
         </section>
         <!-- grgeat tea fresh tea section -->
         <section class="my-24 flex gap-16 flex-col lg:flex-row">
             <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
                 <div class="rounded-lg h-36 bg-gradient-to-r from-red-100 to-white-100"></div>
-                <div class="row-span-2  rounded-lg bg-amber-100 bg-opacity-50 flex justify-center items-center py-12"><img src="./images/fresh-1.png" alt=""></div>
-                <div class="row-span-2 rounded-lg bg-gray-200 bg-opacity-50 flex justify-center items-center py-12"><img src="./images/fresh-2.png" alt=""></div>
+                <div class="row-span-2  rounded-lg bg-amber-100 bg-opacity-50 flex justify-center items-center py-12">
+                    <img src="./images/fresh-1.png" alt=""></div>
+                <div class="row-span-2 rounded-lg bg-gray-200 bg-opacity-50 flex justify-center items-center py-12"><img
+                        src="./images/fresh-2.png" alt=""></div>
                 <div class="rounded-lg h-36 bg-gradient-to-r from-[#D9D9D9] to-[rgba(255, 255, 255, 0.00)]"></div>
             </div>
             <div class="space-y-5 flex-1">
                 <h3 class="text-5xl font-extrabold my-8">Great Tea, Freshly Presented</h3>
-                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its custoers because of good words of mouth and unique customized service orginated
+                    from Taiwan.</p>
                 <h2 class="text-xl font-extrabold my-8">Unique Taste</h2>
                 <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
                 <h2 class="text-xl font-extrabold my-8">Premium Quality</h2>
                 <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </section>
+        <!-- super clint section -->
+        <section
+            class="my-24 flex flex-col items-center gap-48 lg:flex-row rounded-xl bg-gradient-to-l from-[#F00] to-[#FF8938] px-16 py-24">
+            <div class="space-y-5">
+                <h2 class="text-white text-5xl font-extrabold">Meet Our Super Clients</h2>
+                <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    slightly believable. </p>
+                <button class="btn btnprimary">Show All</button>
+            </div>
+            <div class="relative space-y-20">
+                <!--previous review section -->
+                <div class="relative opacity-40 z-10 p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+                <!--current review section -->
+                <div class="absolute top-20 lg:-left-36 z-20 p-10 rounded-lg bg-white lg:w-[430px]">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+                <!--next review section -->
+                <div class="relative opacity-40 z-10 p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment</p>
+                    <h4 class="font-bold mt-5">Ilham Yuda</h4>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
