--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 </head>
 
 <body>
-    <header class="container mx-auto">
+    <header class="lg:mx-24">
         <div class="hero">
-            <div class="hero-content flex-col lg:flex-row-reverse">
+            <div class="hero-content flex-col lg:flex-row-reverse lg:gap-96">
                 <div class="">
                     <img src="./images/banner.png" class="max-w-sm lg:ml-8" />
                     <!-- ratings badge -->
@@ -60,7 +60,9 @@
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
                     <button class="btn text-white bg-gradient-to-l from-[#F00] to-[#FF8938] rounded-lg">Explore
-                        More</button>
+                        More
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -121,7 +123,8 @@
             <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
                 <div class="rounded-lg h-36 bg-gradient-to-r from-red-100 to-white-100"></div>
                 <div class="row-span-2  rounded-lg bg-amber-100 bg-opacity-50 flex justify-center items-center py-12">
-                    <img src="./images/fresh-1.png" alt=""></div>
+                    <img src="./images/fresh-1.png" alt="">
+                </div>
                 <div class="row-span-2 rounded-lg bg-gray-200 bg-opacity-50 flex justify-center items-center py-12"><img
                         src="./images/fresh-2.png" alt=""></div>
                 <div class="rounded-lg h-36 bg-gradient-to-r from-[#D9D9D9] to-[rgba(255, 255, 255, 0.00)]"></div>
@@ -146,7 +149,9 @@
                 <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority
                     have suffered alteration in some form, by injected humour, or randomised words which don't look even
                     slightly believable. </p>
-                <button class="btn btnprimary">Show All</button>
+                <span class="inline-block mt-5 bg-white rounded-lg">
+                    <button class="btn text-transparent bg-gradient-to-l from-[#F00] to-[#FF8938] rounded-lg bg-clip-text border-none">Show All</button>
+                </span>
             </div>
             <div class="relative space-y-20">
                 <!--previous review section -->
@@ -187,8 +192,95 @@
                 </div>
             </div>
         </section>
+        <!-- news and evevt section -->
+        <section class="text-center my-24">
+            <h2 class="text-5xl font-extrabold mb-5">News & Events</h2>
+            <p class="lg:max-w-3xl mb-10 m-auto">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+                even slightly believable. </p>
+            <!-- news cards -->
+            <div class="grid gap-6 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- first card -->
+                <div class="text-left card p-6 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/news-1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <p>Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <h3 class="text-xl font-bold">Learn More</h3>
+                    </div>
+                </div>
+                <!-- firsecondt card -->
+                <div class="text-left card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/news-2.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <p>Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <h3 class="text-xl font-bold">Learn More</h3>
+                    </div>
+                </div>
+                <!-- third card -->
+                <div class="text-left card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                    <figure><img src="./images/news-1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <p>Feb 05, 2027</p>
+                        <h2 class="text-2xl font-bold">Collecting 8 points for discount</h2>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <h3 class="text-xl font-bold">Learn More</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer class="space-y-12 px-4 lg:px-24 py-10 bg-base-200 text-base-content">
+        <div class="flex justify-between items-center">
+            <img src="./images/cup.png" alt="">
+            <div class="flex gap-12 items-center lg:pr-40">
+                <p>Ready to get strated?</p>
+                <button class="btn text-white bg-gradient-to-l from-[#F00] to-[#FF8938] rounded-lg">Get Started</button>
+            </div>
+        </div>
+        <section class="footer">
+            <div>
+                <span class="footer-title">Services</span>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </div>
+            <div>
+                <span class="footer-title">Company</span>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </div>
+            <div>
+                <span class="footer-title">Legal</span>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </div>
+            <div>
+                <span class="footer-title">Newsletter</span>
+                <div class="form-control w-80">
+
+                    <div class="relative">
+                        <input type="text" placeholder="username@site.com"
+                            class=" bg-transparent border-black outline-none" />
+                        <button
+                            class="btn text-white bg-gradient-to-l from-[#F00] to-[#FF8938] absolute -top-2 right-0 rounded-full"><i
+                                class="fa-solid fa-chevron-right"></i></button>
+                        <hr class="border-black mt-5 mr-12">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="mt-4 text-center">
+            <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+        </div>
+    </footer>
 </body>
 
 </html>
